meta title y meta description

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     - primary meta tags
   -->
   <title>Leads | Don Che</title>
-  <meta name="title" content="Adex">
-  <meta name="description" content="This is a business agency html template made by codewithsadee">
+  <meta name="title" content="Leads | Don Che">
+  <meta name="description" content="¡Haz Crecer Tu Negocio! La Revolución del Marketing Digital con Leads Don Che">
 
   <!-- 
     - favicon
