--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Contacto</a>
+            <a href="./favicon.svg" class="navbar-link">Contacto</a>
           </li>
 
         </ul>
