--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="title" content="Agencia de Marketing para Generación de Leads | Leads Don Che">
+  <meta name="description" content="Leads Don Che es una agencia de marketing especializada en generar leads de calidad para tu negocio. ¡Potencia tus ventas hoy mismo con nuestro equipo experto en estrategias de generación de leads!">
+
+
 
   <!-- 
     - primary meta tags
   -->
   <title>Leads | Don Che</title>
-  <meta name="title" content="Leads | Don Che">
-  <meta name="description" content="¡Haz Crecer Tu Negocio! La Revolución del Marketing Digital con Leads Don Che">
 
   <!-- 
     - favicon
