--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
             <div class="btn-wrapper">
 
-              <a href="#" class="btn btn-primary free-btn">Whatsapp</a>
+              <a href="#" class="btn btn-primary free-btn">Prueba gratis</a>
 
             </div>
 
@@ -681,7 +681,7 @@
             Únase a nuestra comunidad utilizando nuestros servicios y haga crecer su negocio.
           </h2>
 
-          <a href="#" class="btn btn-primary">Prueba gratis</a>
+          <a href="#" class="btn btn-primary">WhatsApp</a>
 
         </div>
       </section>
