probando botones paypal

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Leads | Don Che</title>
+  <title>Leads Don Che</title>
 
   <!-- 
     - favicon
