correcciones en botones

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Leads Don Che</title>
+  <title>Marketing Digital | Leads Don Che</title>
 
   <!-- 
     - favicon
@@ -47,15 +47,15 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">
+      <a href="index.html" class="logo">
         <h3 class="navbar-link">Leads Don Che</h3>
       </a>
 
       <nav class="navbar" data-navbar>
 
         <div class="navbar-top">
-          <a href="#" class="logo">
-            <img src="./assets/images/logo-light.svg" width="74" height="24" alt="Adex home">
+          <a href="index.html" class="logo">
+            Leads Don Che
           </a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
@@ -66,46 +66,34 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#" class="navbar-link">Inicio</a>
+            <a href="#inicio" class="navbar-link">Inicio</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Qué hacemos</a>
+            <a href="#service" class="navbar-link">Qué hacemos</a>
           </li>
 
           <li>
-            <a href="#" class="navbar-link">Beneficios</a>
+            <a href="#beneficios" class="navbar-link">Beneficios</a>
           </li>
 
           <li>
-            <a href="./gracias.html" class="navbar-link">Contacto</a>
+            <a href="#contacto" class="navbar-link">Contacto</a>
           </li>
 
         </ul>
 
         <div class="wrapper">
-          <a href="mailto:info@email.com" class="contact-link">info@email.com</a>
+          <a href="mailto:info@email.com" class="contact-link">leads-donche@gmail.com</a>
 
-          <a href="tel:001234567890" class="contact-link">00 (123) 456 78 90</a>
+          <a href="tel:5523398704" class="contact-link">+52 (552) 339 87 04</a>
         </div>
 
         <ul class="social-list">
 
           <li>
             <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li>
-
-          <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-dribbble"></ion-icon>
             </a>
           </li>
 
@@ -118,6 +106,12 @@
           <li>
             <a href="#" class="social-link">
               <ion-icon name="logo-youtube"></ion-icon>
+            </a>
+          </li>
+
+          <li>
+            <a href="#" class="social-link">
+              <ion-icon name="logo-tiktok"></ion-icon>
             </a>
           </li>
 
@@ -147,7 +141,7 @@
         - #HERO
       -->
 
-      <section class="section hero has-bg-image" aria-label="home"
+      <section class="section hero has-bg-image" aria-label="home" id="inicio"
         style="background-image: url('./assets/images/hero-bg.jpg')">
         <div class="container">
 
@@ -161,7 +155,7 @@
 
             <div class="btn-wrapper">
 
-              <a href="#" class="btn btn-primary free-btn">Prueba gratis</a>
+              <a href="./pago.html" class="btn btn-primary free-btn">Prueba gratis</a>
 
             </div>
 
@@ -187,7 +181,7 @@
       -->
 
       <section class="section service" aria-labelledby="service-label">
-        <div class="container">
+        <div class="container" id="service">
 
           <p class="section-subtitle" id="service-label">¿Qué hacemos?</p>
 
@@ -306,7 +300,7 @@
               class="w-100">
           </figure>
 
-          <div class="about-content">
+          <div class="about-content" id="beneficios">
 
             <p class="section-subtitle" id="about-label">¿Por qué elegirnos?</p>
 
@@ -674,11 +668,11 @@
         - #CTA
       -->
 
-      <section class="cta" aria-label="call to action">
+      <section class="cta" aria-label="call to action" id="contacto">
         <div class="container">
 
           <h2 class="h2 section-title">
-            Únase a nuestra comunidad utilizando nuestros servicios y haga crecer su negocio.
+            ¿Tiene dudas? Hablemos por WhatsApp
           </h2>
 
           <a href="#" class="btn btn-primary">WhatsApp</a>
@@ -702,11 +696,12 @@
 
       <div class="footer-brand">
 
-        <a href="#" class="h4 footer-list-title">Market Funnel
+        <a href="#" class="h4 footer-list-title">
+          Leads Don Che
         </a>
 
         <p class="footer-text">
-          &copy; 2024 Market Funnel. <br> Copyright.
+          &copy; 2024 Leads Don Che <br> Copyright.
         </p>
 
         <ul class="social-list">
@@ -746,11 +741,11 @@
         </li>
 
         <li>
-          <a href="mailto:info@email.com" class="footer-link">info@email.com</a>
+          <a href="mailto:info@email.com" class="footer-link">leads-donche@gmail.com</a>
         </li>
 
         <li>
-          <a href="tel:001234567890" class="footer-link">00 (123) 456 78 90</a>
+          <a href="tel:001234567890" class="footer-link">+52 (552) 339 87 04</a>
         </li>
 
       </ul>
