--- a/pago.html
+++ b/pago.html
@@ -48,15 +48,15 @@
     <header class="header" style="background-color: black;">
         <div class="container">
 
-            <a href="#" class="logo">
+            <a href="./index.html" class="logo">
                 <h3 class="navbar-link">Leads Don Che</h3>
             </a>
 
             <nav class="navbar" data-navbar>
 
                 <div class="navbar-top">
-                    <a href="#" class="logo">
-                        <img src="./assets/images/logo-light.svg" width="74" height="24" alt="Adex home">
+                    <a href="./index.html" class="logo">
+                        Leads Don Che
                     </a>
 
                     <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
@@ -67,46 +67,26 @@
                 <ul class="navbar-list">
 
                     <li>
-                        <a href="#" class="navbar-link">Inicio</a>
+                        <a href="./index.html" class="navbar-link">Inicio</a>
                     </li>
 
                     <li>
-                        <a href="#" class="navbar-link">Qué hacemos</a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="navbar-link">Beneficios</a>
-                    </li>
-
-                    <li>
-                        <a href="./gracias.html" class="navbar-link">Contacto</a>
+                        <a href="#contacto-pago" class="navbar-link">Contacto</a>
                     </li>
 
                 </ul>
 
                 <div class="wrapper">
-                    <a href="mailto:info@email.com" class="contact-link">info@email.com</a>
+                    <a href="mailto:leads-donche@gmail.com" class="contact-link">leads-donche@gmail.com</a>
 
-                    <a href="tel:001234567890" class="contact-link">00 (123) 456 78 90</a>
+                    <a href="https://wa.me/5523398704?text=Hola! Me inetersa el plan de Leads Don Che" class="contact-link" target="_blank">+52 (552) 339 87 04</a>
                 </div>
 
                 <ul class="social-list">
 
                     <li>
                         <a href="#" class="social-link">
-                            <ion-icon name="logo-twitter"></ion-icon>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="social-link">
                             <ion-icon name="logo-facebook"></ion-icon>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="#" class="social-link">
-                            <ion-icon name="logo-dribbble"></ion-icon>
                         </a>
                     </li>
 
@@ -210,14 +190,14 @@
         - #CTA
       -->
 
-            <section class="cta" aria-label="call to action">
+            <section class="cta" aria-label="call to action" id="contacto-pago">
                 <div class="container">
 
                     <h2 class="h2 section-title">
                         Si tienes alguna duda con tu pago comunicate ahora mismo.
                     </h2>
 
-                    <a href="#" class="btn btn-primary">WhatsApp</a>
+                    <a href="https://wa.me/5523398704?text=Hola! Tengo duda sobre las formas de pago del plan Leads Don Che" class="btn btn-primary" target="_blank" >WhatsApp</a>
 
                 </div>
             </section>
@@ -238,11 +218,11 @@
 
             <div class="footer-brand">
 
-                <a href="#" class="h4 footer-list-title">Market Funnel
+                <a href="#" class="h4 footer-list-title">Leads Don Che
                 </a>
 
                 <p class="footer-text">
-                    &copy; 2024 Market Funnel. <br> Copyright.
+                    &copy; 2024 Leads Don Che <br> Copyright.
                 </p>
 
                 <ul class="social-list">
@@ -282,11 +262,11 @@
                 </li>
 
                 <li>
-                    <a href="mailto:info@email.com" class="footer-link">info@email.com</a>
+                    <a href="mailto:leads-donche@gmail.com" class="footer-link">leads-donche@gmail.com</a>
                 </li>
 
                 <li>
-                    <a href="tel:001234567890" class="footer-link">00 (123) 456 78 90</a>
+                    <a href="https://wa.me/5523398704?text=Hola me interesa saber más sobre el plan de leads Don Che" class="footer-link" target="_blank">+52 (552) 339 87 04</a>
                 </li>
 
             </ul>
