--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
             ¿Tiene dudas? Hablemos por WhatsApp
           </h2>
 
-          <a href="#" class="btn btn-primary">WhatsApp</a>
+          <a href="https://wa.me/5523398704?text=Hola! Me inetersa el plan de Leads Don Che" class="btn btn-primary">WhatsApp</a>
 
         </div>
       </section>
@@ -745,7 +745,7 @@
         </li>
 
         <li>
-          <a href="tel:001234567890" class="footer-link">+52 (552) 339 87 04</a>
+          <a href="tel:5523398704" class="footer-link">+52 (552) 339 87 04</a>
         </li>
 
       </ul>
