video ciclo de ventas

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="title" content="Agencia de Marketing para Generación de Leads | Leads Don Che">
-  <meta name="description" content="Leads Don Che es una agencia de marketing especializada en generar leads de calidad para tu negocio. ¡Potencia tus ventas hoy mismo con nuestro equipo experto en estrategias de generación de leads!">
+  <meta name="description"
+    content="Leads Don Che es una agencia de marketing especializada en generar leads de calidad para tu negocio. ¡Potencia tus ventas hoy mismo con nuestro equipo experto en estrategias de generación de leads!">
 
 
 
@@ -147,7 +148,8 @@
 
           <div class="hero-content">
 
-            <h1 class="h1 hero-title">¡Haz Crecer Tu Negocio! <br> La Revolución del Marketing Digital con Leads Don Che</h1>
+            <h1 class="h1 hero-title">¡Haz Crecer Tu Negocio! <br> La Revolución del Marketing Digital con Leads Don Che
+            </h1>
 
             <p class="hero-text">
               ¡Descubre cómo nuestro servicio de Leads puede impulsar tu éxito empresarial hoy mismo!"
@@ -163,10 +165,11 @@
 
           <div class="hero-slider" data-slider>
             <iframe width="100%" height="315"
-              src="https://www.youtube.com/embed/Vku6pQjbggk?si=2dHKwkyCmRFFmCGA&amp;start=1"
-              title="YouTube video player" frameborder="0"
+              src="https://www.youtube.com/embed/HHFOn1IDKUA?si=qaObOY3mOfdsaacW" title="YouTube video player"
+              frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
           </div>
 
         </div>
@@ -201,9 +204,10 @@
                 <h3 class="h4 card-title">Atracción</h3>
 
                 <p class="card-text">
-                  Potencia tu presencia digital con estrategias en redes sociales, campañas publicitarias y un sólido posicionamiento en Google.
+                  Potencia tu presencia digital con estrategias en redes sociales, campañas publicitarias y un sólido
+                  posicionamiento en Google.
                 </p>
-<!-- 
+                <!-- 
                 <a href="#" class="btn-text">
                   <span class="span">Learn More</span>
 
@@ -223,7 +227,8 @@
                 <h3 class="h4 card-title">Conversión</h3>
 
                 <p class="card-text">
-                  Convierte Visitantes en Clientes: Aprovecha nuestras llamadas a la acción, páginas de aterrizaje y contenido de alto valor para impulsar tus conversiones.
+                  Convierte Visitantes en Clientes: Aprovecha nuestras llamadas a la acción, páginas de aterrizaje y
+                  contenido de alto valor para impulsar tus conversiones.
                 </p>
 
                 <!-- <a href="#" class="btn-text">
@@ -245,7 +250,8 @@
                 <h3 class="h4 card-title">Cierre</h3>
 
                 <p class="card-text">
-                  Cierra Ventas de Forma Personalizada! Desde WhatsApp hasta video llamadas o visitas en persona, te brindamos todas las herramientas para cerrar negocios con éxito.
+                  Cierra Ventas de Forma Personalizada! Desde WhatsApp hasta video llamadas o visitas en persona, te
+                  brindamos todas las herramientas para cerrar negocios con éxito.
                 </p>
 
                 <!-- <a href="#" class="btn-text">
@@ -267,7 +273,8 @@
                 <h3 class="h4 card-title">Fidelizar</h3>
 
                 <p class="card-text">
-                  ¡Fideliza y Sorprende a tus Clientes! Mantén el contacto con promociones exclusivas a través de email marketing y WhatsApp, garantizando una relación duradera y beneficiosa para ambos.
+                  ¡Fideliza y Sorprende a tus Clientes! Mantén el contacto con promociones exclusivas a través de email
+                  marketing y WhatsApp, garantizando una relación duradera y beneficiosa para ambos.
                 </p>
 
                 <!-- <a href="#" class="btn-text">
@@ -425,7 +432,7 @@
                   </div>
 
                   <span class="span">
-                    Capta  a tu audiencia en redes sociales
+                    Capta a tu audiencia en redes sociales
                   </span>
 
                 </div>
@@ -439,7 +446,7 @@
                   </div>
 
                   <span class="span">
-                    Conversa con tus prospectos. 
+                    Conversa con tus prospectos.
                   </span>
 
                 </div>
@@ -675,7 +682,8 @@
             ¿Tiene dudas? Hablemos por WhatsApp
           </h2>
 
-          <a href="https://wa.me/5523398704?text=Hola! Me inetersa el plan de Leads Don Che" class="btn btn-primary">WhatsApp</a>
+          <a href="https://wa.me/5523398704?text=Hola! Me inetersa el plan de Leads Don Che"
+            class="btn btn-primary">WhatsApp</a>
 
         </div>
       </section>
