--- a/index.html
+++ b/index.html
@@ -148,11 +148,12 @@
 
           <div class="hero-content">
 
-            <h1 class="h1 hero-title">¡Haz Crecer Tu Negocio! <br> La Revolución del Marketing Digital con Leads Don Che
+            <h1 class="h1 hero-title">
+              Aumenta tus Ventas con Nuestro Enfoque en el Ciclo Completo de Ventas
             </h1>
 
             <p class="hero-text">
-              ¡Descubre cómo nuestro servicio de Leads puede impulsar tu éxito empresarial hoy mismo!"
+              ¡Descubre cómo nuestro servicio de Leads transforma Visitantes en Clientes Fieles"
             </p>
 
             <div class="btn-wrapper">
@@ -164,9 +165,8 @@
           </div>
 
           <div class="hero-slider" data-slider>
-            <iframe width="100%" height="315"
-              src="https://www.youtube.com/embed/HHFOn1IDKUA?si=qaObOY3mOfdsaacW" title="YouTube video player"
-              frameborder="0"
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/HHFOn1IDKUA?si=qaObOY3mOfdsaacW"
+              title="YouTube video player" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
@@ -201,11 +201,11 @@
                   <ion-icon name="magnet-outline" aria-hidden="true"></ion-icon>
                 </div>
 
-                <h3 class="h4 card-title">Atracción</h3>
+                <h3 class="h4 card-title">Presentación</h3>
 
                 <p class="card-text">
-                  Potencia tu presencia digital con estrategias en redes sociales, campañas publicitarias y un sólido
-                  posicionamiento en Google.
+                  En esta etapa, nos enfocamos en presentar tu producto o servicio a personas altamente receptivas y
+                  potencialmente interesadas en lo que tienes que ofrecer.
                 </p>
                 <!-- 
                 <a href="#" class="btn-text">
@@ -224,11 +224,11 @@
                   <ion-icon name="shield-checkmark-outline" aria-hidden="true"></ion-icon>
                 </div>
 
-                <h3 class="h4 card-title">Conversión</h3>
+                <h3 class="h4 card-title">Evaluación</h3>
 
                 <p class="card-text">
-                  Convierte Visitantes en Clientes: Aprovecha nuestras llamadas a la acción, páginas de aterrizaje y
-                  contenido de alto valor para impulsar tus conversiones.
+                  Las personas que ya te conocen estan evaluando si comprarte a ti o a tu competencia, por lo que
+                  diseñamos anuncios especiales para que te elijan a ti.
                 </p>
 
                 <!-- <a href="#" class="btn-text">
@@ -247,11 +247,11 @@
                   <ion-icon name="cash-outline" aria-hidden="true"></ion-icon>
                 </div>
 
-                <h3 class="h4 card-title">Cierre</h3>
+                <h3 class="h4 card-title">Conversión</h3>
 
                 <p class="card-text">
-                  Cierra Ventas de Forma Personalizada! Desde WhatsApp hasta video llamadas o visitas en persona, te
-                  brindamos todas las herramientas para cerrar negocios con éxito.
+                  En esta etapa, las personas ya se decidieron por comprarte por lo que se tiene que tener un sitio web
+                  para capturar sus datos y cerrar la venta.
                 </p>
 
                 <!-- <a href="#" class="btn-text">
