Agregando formulario con netlify

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <ul class="social-list">
 
           <li>
-            <a href="#" class="social-link">
+            <a href="https://www.facebook.com/profile.php?id=61557919866073" class="social-link" target="_blank">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
