--- a/pages/contact-inmobiliaria.html
+++ b/pages/contact-inmobiliaria.html
@@ -24,7 +24,7 @@
             </figure>
         </div>
         <div class="content form" >
-            <form action="contact" method="POST" netlify>
+            <form name="contact" method="POST" netlify>
                 <div class="form-group">
                     <h3>Registrate a la clase</h3>
 
