--- a/pages/contact-inmobiliaria.html
+++ b/pages/contact-inmobiliaria.html
@@ -24,13 +24,13 @@
             </figure>
         </div>
         <div class="content form" >
-            <form name="contact" method="POST" netlify>
+            <form action="/welcome-inmobiliario.html" name="contact" method="POST" netlify>
                 <div class="form-group">
                     <h3>Registrate a la clase</h3>
 
                 </div>
                 <div class="form-group">
-                    <input type="text" id="nombre" name="nombre" placeholder="Tu nombre">
+                    <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required>
                 </div>
                 <div class="form-group">
                     <input type="text" id="agencia" name="agencia" placeholder="Tu agencia">
@@ -39,7 +39,7 @@
                     <input type="tel" id="telefono" name="telefono" placeholder="Tu teléfono">
                 </div>
                 <div class="form-group">
-                    <input type="email" id="email" name="email" placeholder="Tu correo electrónico">
+                    <input type="email" id="email" name="email" placeholder="Tu correo electrónico" required>
                 </div>
                 <button type="submit"><i class="fas fa-paper-plane"></i> Obten entrenamiento</button>
             </form>      
