--- a/pages/master-class.html
+++ b/pages/master-class.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Metodología para conseguir mas clientes</title>
     <link rel="stylesheet" href="/assets/css/master-class.css">
 </head>
 <body>
 
     <section class="content main">
-        <h2>Tu proceso empresarial necesita estos 4 pasos</h2>
+        <h2>Tu proceso empresarial necesita estas 5 estrategias</h2>
     </section>
 
     <section class="content video-content">
@@ -17,8 +17,8 @@
     </section>
 
     <section class="content llamada">
-        <h3>Agenda una llamada para conocer mas sobre funnel de ventas</h3>
-        <button type="submit"><i class="fas fa-paper-plane"></i>Agenda una llamada</button>
+        <h3>Agenda una llamada para conocer más sobre nuestros paquetes</h3>
+        <button type="submit"><i class="fas fa-paper-plane" id="agendarBtn"></i>Agenda una llamada</button>
         <h4>Solo daremos 10 lugares por mes</h4>
     </section>
 
@@ -66,5 +66,6 @@
         © 2024 Copyright: <a href="https://leads-donche.com/" target="_blank" style="text-decoration: none; color: white;">leads-donche.com</a>
     </footer>
 
+    <script src="/assets/js/llamada.js"></script>
 </body>
 </html>
