--- a/pages/registro-masterclass.html
+++ b/pages/registro-masterclass.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="/assets/css/landing-inmobiliaria.css">
-    <title></title>
+    <title>Te explico como generar más clientes</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     
 </head>
@@ -14,14 +15,12 @@
     </header>
 
     <section class="encabezado main">
-        <h2>Entrenamiento para agencias inmobiliarias modernas</h2>
+        <h2>Entrenamiento para dueños de negocios y emprendedores</h2>
     </section>
 
     <section class="container">
-        <div class="content img-content">
-            <figure>
-                <img src="/assets/images/Landing page.png" alt="Imagen" class="img-landing">
-            </figure>
+        <div class="content video-content">
+            <video class="video-landing" src="/assets/video/Ernesto guevara tapia.mp4" type="video/mp4" loop autoplay></video>
         </div>
         <div class="content form" >
             <form action="/pages/master-class.html" name="contact" method="POST" netlify>
