--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
             <div class="btn-wrapper">
 
-              <a href="/pages/registro-masterclass.html" class="btn btn-primary free-btn">Prueba gratis</a>
+              <a href="/pages/registro-masterclass.html" class="btn btn-primary free-btn">Clase de ventas masivas</a>
 
             </div>
 
