--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="/assets/images/" alt="Logo" style="width: 200px; height: auto;">
+          <img src="/assets/images/DON CHE.png" alt="Logo" class="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
