--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Landing Page</title>
+  <title>Agencia de Marketing Digital | Leads Don Che</title>
+  <meta name="description" content="Agencia de desarrollo web y marketing digital en Puebla. Expertos en diseño de landing page. Creacion de sitios web con animaciones. Promocionando en Google Ads. Publicaciones de Faceebook Ads.">
 
-
+  <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-
+  <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -21,6 +22,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
 
+  <!-- Estilos CSS -->
   <link href="/assets/css/style.css" rel="stylesheet">
 </head>
 
@@ -54,7 +56,7 @@
             </li>
           </ul>
           <div class="d-flex">
-            <button class="btn">Haz una cotización</button>
+            <button class="btn">Contacto</button>
           </div>
         </div>
       </div>
@@ -66,7 +68,7 @@
       </video>
     </div>
     <div class="header-content text-center">
-      <a href="#cotizacion" class="btn call-action">Haz una cotización</a>
+      <a href="#cotizacion" class="btn call-action">Hacer cotización</a>
     </div>
   </header>
 
