--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Agencia de Marketing Digital | Leads Don Che</title>
-  <meta name="description" content="Agencia de desarrollo web y marketing digital en Puebla. Expertos en diseño de landing page. Creacion de sitios web con animaciones. Promocionando en Google Ads. Publicaciones de Faceebook Ads.">
+  <meta name="description"
+    content="Agencia de desarrollo web y marketing digital en Puebla. Expertos en diseño de landing page. Creacion de sitios web con animaciones. Promocionando en Google Ads. Publicaciones de Faceebook Ads.">
 
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -27,7 +28,7 @@
 </head>
 
 <body>
-  
+
 
   <!-- Sección Hero -->
   <header class="header">
@@ -78,9 +79,42 @@
   <section class="features py-5">
     <div class="container">
       <div class="row align-items-center">
-        <video src=""></video>
+        <video src="">Aqui va un video</video>
+      </div>
     </div>
   </section>
+
+  <!-- PROYECTOS RECIENTES -->
+  <section class="recent-projects">
+    <div class="container">
+      <p style="font-weight: bold;">Portafolio</p>
+    <h2><span class="color-head">Proyectos</span> Recientes</h2>
+    <p>Mediante la pasion por el desarrollo web y nuestra expertis en marketing digital producimos resultados extraordinarios</p>
+
+      <div class="projects-container">
+        <div class="project-card">
+          <img src="/assets/images/SERIART-TEZIUTLAN-TESTIMONIO.jpg" alt="Landing page fotografia">
+          <div class="description">
+            <h3>Seriart | Fotos de graduación</h3>
+            <p class="description-p">Seriart Teziutlán es una agencia de fotografia experta en fotos de graduación. Con su landing page diseñada para convertir visitantes en clientes lograron llenar su agenda con sesiones fotograficas de bachilleratos y universidades de Puebla y Veracruz</p>
+            <p>Servicio que se le brinda: Landing Page + Meta Ads</p>
+          </div>
+        </div>
+        <div class="project-card">
+          <img src="/assets/images/SIERRAINMOBILIARIA-TESTIMONIO.jpg" alt="Sitio web agencia inmobiliaria">
+          <div class="description">
+            <h3>Sierra Raíces Inmobiliaría</h3>
+            <p class="description-p">Esta agencia inmobiliaria de terrenos y departamentos en Veracruz. Recibe a sus clientes en su sitio web profesional diseñado para generar confianza y mostrar las diferentes propiedades disponibles. Así como un sistema de pago online.</p>
+            <p>Servicio que se le brinda: Sitio Web + Google Ads</p>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    
+
+  </section>
+
 
   <!-- Sección Servicios -->
   <section class="services py-5">
@@ -96,7 +130,8 @@
             <img src="service1.jpg" class="card-img-top" alt="Servicio 1">
             <div class="card-body">
               <h5 class="card-title">Landing page</h5>
-              <p class="card-text">Una landing page funciona para convertir visitantes en clientes. Aportando mucho valor a tu servicio. Ellos obtienen lo que quieren y tu lo que quieres, vender!</p>
+              <p class="card-text">Una landing page funciona para convertir visitantes en clientes. Aportando mucho
+                valor a tu servicio. Ellos obtienen lo que quieren y tu lo que quieres, vender!</p>
             </div>
           </div>
         </div>
@@ -105,7 +140,8 @@
             <img src="service2.jpg" class="card-img-top" alt="Servicio 2">
             <div class="card-body">
               <h5 class="card-title">Google ads</h5>
-              <p class="card-text">Necesitas que tu sitio web tenga muchas visitas. Este servicio es ideal para cuando quieres que tus clientes te encuentren en google.</p>
+              <p class="card-text">Necesitas que tu sitio web tenga muchas visitas. Este servicio es ideal para cuando
+                quieres que tus clientes te encuentren en google.</p>
             </div>
           </div>
         </div>
@@ -114,7 +150,8 @@
             <img src="service3.jpg" class="card-img-top" alt="Servicio 3">
             <div class="card-body">
               <h5 class="card-title">Meta ads</h5>
-              <p class="card-text">Si lo que necesitas es impulsar tu marca y llegar a mucha gente este servicio te permitira darte a conocer con aquellos que no saben que necesitan tu servicio.</p>
+              <p class="card-text">Si lo que necesitas es impulsar tu marca y llegar a mucha gente este servicio te
+                permitira darte a conocer con aquellos que no saben que necesitan tu servicio.</p>
             </div>
           </div>
         </div>
@@ -123,7 +160,8 @@
             <img src="service4.jpg" class="card-img-top" alt="Servicio 4">
             <div class="card-body">
               <h5 class="card-title">SEO</h5>
-              <p class="card-text">Deseas permanecer en las primeras posiciones de Google. El posicionamiento SEO es ideal para empresas que tienen una gran audiencia con un buen nicho de alto valor</p>
+              <p class="card-text">Deseas permanecer en las primeras posiciones de Google. El posicionamiento SEO es
+                ideal para empresas que tienen una gran audiencia con un buen nicho de alto valor</p>
             </div>
           </div>
         </div>
