--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <a class="nav-link active" href="#">Google ads</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">SEO</a>
+              <a class="nav-link active" href="#">Landing Page</a>
             </li>
           </ul>
           <div class="d-flex">
@@ -76,10 +76,29 @@
 
 
   <!-- Sección Características -->
-  <section class="features py-5">
-    <div class="container">
-      <div class="row align-items-center">
-        <video src="">Aqui va un video</video>
+  <section class="features">
+    <h2>Concentrate En Tu Negocio</h2>
+    <p>Nosotros En Tu Página Web</p>
+    <div class="cards">
+      <div class="card">
+        <h3>Tu Negocio Será Encontrado</h3>
+        <img src="/assets/images/ENCONTRAR.png" alt="SEARCH-ONLINE">
+        <p>Haz que tus clientes te encuentren en Google de forma rápida y sencilla.</p>
+      </div>
+      <div class="card">
+        <h3>Vende Productos y Servicios</h3>
+        <img src="/assets/images/VENTA ONLINE.png" alt="VENTA ONLINE">
+        <p>Muestra el catálogo de tu empresa y genera ventas en automático.</p>
+      </div>
+      <div class="card">
+        <h3>Haz Crecer Tu Empresa</h3>
+        <img src="/assets/images/IMPULSA.png" alt="IMPULSA TU MARCA">
+        <p>Necesitas una página web para darle un impulso real a tu negocio digital.</p>
+      </div>
+      <div class="card">
+        <h3>Genera Un Punto de Reunión</h3>
+        <img src="/assets/images/CENTRALIZAR.png" alt="CENTRALIZA TUS CLIENTES">
+        <p>Tu sitio web es el lugar donde concentras el tráfico de tus clientes.</p>
       </div>
     </div>
   </section>
@@ -88,202 +107,47 @@
   <section class="recent-projects">
     <div class="container">
       <p style="font-weight: bold;">Portafolio</p>
-    <h2><span class="color-head">Proyectos</span> Recientes</h2>
-    <p>Mediante la pasion por el desarrollo web y nuestra expertis en marketing digital producimos resultados extraordinarios</p>
+      <h2><span class="color-head">Proyectos</span> Recientes</h2>
+      <p>Mediante la pasion por el desarrollo web y nuestra expertis en marketing digital producimos resultados
+        extraordinarios</p>
 
       <div class="projects-container">
         <div class="project-card">
-          <img src="/assets/images/SERIART-TEZIUTLAN-TESTIMONIO.jpg" alt="Landing page fotografia">
           <div class="description">
             <h3>Seriart | Fotos de graduación</h3>
-            <p class="description-p">Seriart Teziutlán es una agencia de fotografia experta en fotos de graduación. Con su landing page diseñada para convertir visitantes en clientes lograron llenar su agenda con sesiones fotograficas de bachilleratos y universidades de Puebla y Veracruz</p>
+            <p class="description-p">Seriart Teziutlán es una agencia de fotografia experta en fotos de graduación. Con
+              su landing page diseñada para convertir visitantes en clientes lograron llenar su agenda con sesiones
+              fotograficas de bachilleratos y universidades de Puebla y Veracruz</p>
             <p>Servicio que se le brinda: Landing Page + Meta Ads</p>
           </div>
+          <img src="/assets/images/SERIART-TEZIUTLAN-TESTIMONIO.jpg" alt="Landing page fotografia">
+
         </div>
         <div class="project-card">
           <img src="/assets/images/SIERRAINMOBILIARIA-TESTIMONIO.jpg" alt="Sitio web agencia inmobiliaria">
           <div class="description">
             <h3>Sierra Raíces Inmobiliaría</h3>
-            <p class="description-p">Esta agencia inmobiliaria de terrenos y departamentos en Veracruz. Recibe a sus clientes en su sitio web profesional diseñado para generar confianza y mostrar las diferentes propiedades disponibles. Así como un sistema de pago online.</p>
+            <p class="description-p">Esta agencia inmobiliaria de terrenos y departamentos en Veracruz. Recibe a sus
+              clientes en su sitio web profesional diseñado para generar confianza y mostrar las diferentes propiedades
+              disponibles. Así como un sistema de pago online.</p>
             <p>Servicio que se le brinda: Sitio Web + Google Ads</p>
           </div>
 
         </div>
       </div>
     </div>
-    
-
   </section>
 
-
-  <!-- Sección Servicios -->
-  <section class="services py-5">
-    <div class="container">
-      <div class="text-center">
-        <p class="lead">Nos apasiona</p>
-        <h3>Servir Con</h3>
-      </div>
-      <!-- Agrega una clase `my-4` a la fila para espaciado vertical -->
-      <div class="row mt-4 my-4">
-        <div class="col-md-3">
-          <div class="card">
-            <img src="service1.jpg" class="card-img-top" alt="Servicio 1">
-            <div class="card-body">
-              <h5 class="card-title">Landing page</h5>
-              <p class="card-text">Una landing page funciona para convertir visitantes en clientes. Aportando mucho
-                valor a tu servicio. Ellos obtienen lo que quieren y tu lo que quieres, vender!</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card">
-            <img src="service2.jpg" class="card-img-top" alt="Servicio 2">
-            <div class="card-body">
-              <h5 class="card-title">Google ads</h5>
-              <p class="card-text">Necesitas que tu sitio web tenga muchas visitas. Este servicio es ideal para cuando
-                quieres que tus clientes te encuentren en google.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card">
-            <img src="service3.jpg" class="card-img-top" alt="Servicio 3">
-            <div class="card-body">
-              <h5 class="card-title">Meta ads</h5>
-              <p class="card-text">Si lo que necesitas es impulsar tu marca y llegar a mucha gente este servicio te
-                permitira darte a conocer con aquellos que no saben que necesitan tu servicio.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <div class="card">
-            <img src="service4.jpg" class="card-img-top" alt="Servicio 4">
-            <div class="card-body">
-              <h5 class="card-title">SEO</h5>
-              <p class="card-text">Deseas permanecer en las primeras posiciones de Google. El posicionamiento SEO es
-                ideal para empresas que tienen una gran audiencia con un buen nicho de alto valor</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+  <section class="about">
+    <h1>Agencia de <span class="color-head">Desarrollo Web</span> y <span class="color-head">Marketing Digital</span> #1
+      en Puebla</h1>
   </section>
 
-  <!-- Sección Testimonios -->
-  <section class="testimonials py-5">
+  <section class="services">
     <div class="container">
-      <div class="text-center">
-        <p class="lead">Lo que Nuestros Clientes Dicen</p>
-        <h3>Testimonios</h3>
-      </div>
-      <!-- Tarjetas de Testimonios -->
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mt-4">
-        <!-- Testimonio 1 -->
-        <div class="col">
-          <div class="card h-100">
-            <div class="card-body">
-              <h5 class="card-title">Testimonio 1</h5>
-              <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus placerat, velit id
-                maximus pulvinar, leo urna gravida magna, vitae viverra lectus lorem et velit."</p>
-            </div>
-          </div>
-        </div>
-        <!-- Testimonio 2 -->
-        <div class="col">
-          <div class="card h-100">
-            <div class="card-body">
-              <h5 class="card-title">Testimonio 2</h5>
-              <p class="card-text">"Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                egestas. Maecenas rhoncus sapien at turpis porttitor, non consequat mauris ullamcorper."</p>
-            </div>
-          </div>
-        </div>
-        <!-- Más tarjetas de testimonios aquí -->
-        <div class="col">
-          <div class="card h-100">
-            <div class="card-body">
-              <h5 class="card-title">Testimonio 10</h5>
-              <p class="card-text">"Vestibulum faucibus erat eget nunc laoreet efficitur. Nunc ullamcorper, ligula vel
-                commodo rutrum, dolor est commodo elit, eget varius nunc purus ac mi."</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <div class="card-body">
-              <h5 class="card-title">Testimonio 10</h5>
-              <p class="card-text">"Vestibulum faucibus erat eget nunc laoreet efficitur. Nunc ullamcorper, ligula vel
-                commodo rutrum, dolor est commodo elit, eget varius nunc purus ac mi."</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <div class="card-body">
-              <h5 class="card-title">Testimonio 10</h5>
-              <p class="card-text">"Vestibulum faucibus erat eget nunc laoreet efficitur. Nunc ullamcorper, ligula vel
-                commodo rutrum, dolor est commodo elit, eget varius nunc purus ac mi."</p>
-            </div>
-          </div>
-        </div>
-
-        <!-- Testimonio 10 -->
-        <div class="col">
-          <div class="card h-100">
-            <div class="card-body">
-              <h5 class="card-title">Testimonio 10</h5>
-              <p class="card-text">"Vestibulum faucibus erat eget nunc laoreet efficitur. Nunc ullamcorper, ligula vel
-                commodo rutrum, dolor est commodo elit, eget varius nunc purus ac mi."</p>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </section>
-
-  <!-- Sección Contacto -->
-  <section class="contact py-5">
-    <div class="container">
-      <div class="row">
-        <!-- Primer Contenedor con Formulario de Contacto -->
-        <div class="col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h3 class="card-title">¡Contáctanos!</h3>
-              <form>
-                <div class="mb-3">
-                  <label for="name" class="form-label">Nombre</label>
-                  <input type="text" class="form-control" id="name">
-                </div>
-                <div class="mb-3">
-                  <label for="email" class="form-label">Correo Electrónico</label>
-                  <input type="email" class="form-control" id="email">
-                </div>
-                <div class="mb-3">
-                  <label for="phone" class="form-label">Teléfono</label>
-                  <input type="tel" class="form-control" id="phone">
-                </div>
-                <div class="mb-3">
-                  <label for="message" class="form-label">Mensaje</label>
-                  <textarea class="form-control" id="message" rows="5"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
-              </form>
-              <hr>
-              <p class="mb-0">¿Prefieres WhatsApp?</p>
-              <a href="https://wa.me/1234567890" class="btn btn-success">Contactar por WhatsApp</a>
-            </div>
-          </div>
-        </div>
-        <!-- Segundo Contenedor con Mapa de Google -->
-        <div class="col-md-6 mt-4 mt-md-0">
-          <!-- Aquí va el código de Google Maps -->
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2689.5812455525444!2d-122.08364968441849!3d37.38605130767719!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580e95db4cb13%3A0xf0b6b9e0e73b4df5!2sGolden%20Gate%20Bridge!5e0!3m2!1sen!2sus!4v1628874688032!5m2!1sen!2sus"
-            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-      </div>
+      <p class="explain"><b>Don Che</b> se compromete a brindar soporte de TI experto, <b>duradero</b> y excepcional a todos y cada uno de
+        los clientes con los que trabajamos.</p>
+      <p class="color-p">Nuestros servicios</p>
     </div>
   </section>
 
