Agregando servicios y llamada a la accion mind

--- a/index.html
+++ b/index.html
@@ -80,22 +80,22 @@
     <h2>Concentrate En Tu Negocio</h2>
     <p>Nosotros En Tu Página Web</p>
     <div class="cards">
-      <div class="card">
+      <div class="card-features">
         <h3>Tu Negocio Será Encontrado</h3>
         <img src="/assets/images/ENCONTRAR.png" alt="SEARCH-ONLINE">
         <p>Haz que tus clientes te encuentren en Google de forma rápida y sencilla.</p>
       </div>
-      <div class="card">
+      <div class="card-features">
         <h3>Vende Productos y Servicios</h3>
         <img src="/assets/images/VENTA ONLINE.png" alt="VENTA ONLINE">
         <p>Muestra el catálogo de tu empresa y genera ventas en automático.</p>
       </div>
-      <div class="card">
+      <div class="card-features">
         <h3>Haz Crecer Tu Empresa</h3>
         <img src="/assets/images/IMPULSA.png" alt="IMPULSA TU MARCA">
         <p>Necesitas una página web para darle un impulso real a tu negocio digital.</p>
       </div>
-      <div class="card">
+      <div class="card-features">
         <h3>Genera Un Punto de Reunión</h3>
         <img src="/assets/images/CENTRALIZAR.png" alt="CENTRALIZA TUS CLIENTES">
         <p>Tu sitio web es el lugar donde concentras el tráfico de tus clientes.</p>
@@ -145,9 +145,43 @@
 
   <section class="services">
     <div class="container">
-      <p class="explain"><b>Don Che</b> se compromete a brindar soporte de TI experto, <b>duradero</b> y excepcional a todos y cada uno de
-        los clientes con los que trabajamos.</p>
+      <p class="explain"><b>Don Che</b> se compromete a brindar soporte de TI experto, <b>duradero</b> y excepcional a
+        todos y cada uno de los clientes con los que trabajamos.</p>
       <p class="color-p">Nuestros servicios</p>
+
+      <!-- Añadimos un div con dos tarjetas -->
+      <div class="card-container">
+        <div class="card-service" style="background: rgb(221,221,221);
+        background: linear-gradient(0deg, rgba(221,221,221,1) 0%, rgba(237,237,237,1) 35%, rgba(253,253,253,1) 100%);">
+          <h3 >Desarrollo Web</h3>
+          <p>Nuestro equipo de TI tiene una amplia experiencia en el diseño y construcción de sitios web. No importa tus
+            necesidades, tenemos la solución para ti; Nuestra experiencia en la creación de sitios web abarca desde
+            páginas de destino muy simples hasta sitios web corporativos muy elaborados en una variedad de industrias.
+            Podemos decir con confianza que no importa cuán simple o elaborado deba ser su sitio web, estamos preparados
+            para cumplirlo.</p>
+        </div>
+        <div class="card-service"
+          style="background: rgb(194,205,255);
+          background: linear-gradient(0deg, rgba(194,205,255,1) 0%, rgba(235,238,255,1) 35%, rgba(253,253,255,1) 100%);">
+          <h3>Marketing Digital</h3>
+          <p>Nuestro equipo ha gestionado campañas exitosas de Facebook Ads y Google Ads para múltiples empresas
+            emergentes y consolidadas. Tenemos experiencia trabajando con negocios desde cero, desarrollando estrategias
+            publicitarias efectivas que impulsan su crecimiento. Además, nuestro equipo le brindará la experiencia
+            necesaria para diseñar campañas que resuenen con su público objetivo y garanticen el reconocimiento que su
+            marca merece.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="have-mind">
+    <div class="container mind">
+      <h3>¿Tienes un proyecto en mente?</h3>
+      <p>Creemos algo juntos.</p>
+      <a href="#">
+        <button class="btn">Contacto</button>
+      </a>
     </div>
   </section>
 
