terminando seccion de servicios

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
             páginas de destino muy simples hasta sitios web corporativos muy elaborados en una variedad de industrias.
             Podemos decir con confianza que no importa cuán simple o elaborado deba ser su sitio web, estamos preparados
             para cumplirlo.</p>
+            <img src="/assets/images/service-1.png" alt="servicio-1" style="width: 90%; margin: 0 auto;">
         </div>
         <div class="card-service"
           style="background: rgb(194,205,255);
@@ -170,6 +171,7 @@
             necesaria para diseñar campañas que resuenen con su público objetivo y garanticen el reconocimiento que su
             marca merece.
           </p>
+          <img src="/assets/images/service-2.png" alt="servicio-2" style="width: 90%; margin: 0 auto;">
         </div>
       </div>
     </div>
