Agregando enlace whats de btn contacto

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 
           </ul>
           <div class="d-flex">
-            <button class="btn btn-contact">Contacto</button>
+            <a href="https://wa.me/+525523398704?text=Hola hablo a Don Che. Me interesa Información sobre los sitios web"
+            target="_blank" ><button class="btn btn-contact">Contacto</button></a>
           </div>
         </div>
       </div>
@@ -185,7 +186,8 @@
       <h3>¿Tienes un proyecto en mente?</h3>
       <p>Creemos algo juntos.</p>
       <a href="#">
-        <button class="btn btn-contact">Contacto</button>
+        <a href="https://wa.me/+525523398704?text=Hola hablo a Don Che. Me interesa Información sobre los sitios web"
+        target="_blank"><button class="btn btn-contact">Contacto</button></a>
       </a>
     </div>
   </section>
