--- a/pages/cotizacion.html
+++ b/pages/cotizacion.html
@@ -92,19 +92,19 @@
                 <input type="text" id="industry" name="industry" placeholder="Servicios que ofreces" readonly>
             </div>
             <div class="form-group full-width">
-                <label>Choose an option:</label>
+                <label>¿Qué necesita tu negocio?:</label>
                 <div class="option-group">
                     <div class="option">
                         <input type="radio" id="option1" name="option" value="option1" required>
-                        <label for="option1">Option 1</label>
+                        <label for="option2">Presencia en Internet</label>
                     </div>
                     <div class="option">
                         <input type="radio" id="option2" name="option" value="option2" required>
-                        <label for="option2">Option 2</label>
+                        <label for="option3">Interactuar con tus clientes</label>
                     </div>
                     <div class="option">
                         <input type="radio" id="option3" name="option" value="option3" required>
-                        <label for="option3">Option 3</label>
+                        <label for="option1">Conseguir más clientes</label>
                     </div>
                 </div>
             </div>
