--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </video>
     </div>
     <div class="header-content text-center">
-      <a href="#cotizacion" class="btn call-action"><span>Hacer cotización</span></a>
+      <a href="/pages/cotizacion.html" class="btn call-action"><span>Hacer cotización</span></a>
     </div>    
   </header>
 
