--- a/pages/cotizacion.html
+++ b/pages/cotizacion.html
@@ -85,11 +85,11 @@
             </div>
             <div class="form-group">
                 <label for="company">Compañia</label>
-                <input type="text" id="company" name="company" placeholder="Nombre de tu negocio" readonly>
+                <input type="text" id="company" name="company" placeholder="Nombre de tu negocio" required>
             </div>
             <div class="form-group">
                 <label for="industry">Industria</label>
-                <input type="text" id="industry" name="industry" placeholder="Servicios que ofreces" readonly>
+                <input type="text" id="industry" name="industry" placeholder="Servicios que ofreces" required>
             </div>
             <div class="form-group full-width">
                 <label>¿Qué necesita tu negocio?:</label>
