terminando pagina de cotizacion

--- a/pages/cotizacion.html
+++ b/pages/cotizacion.html
@@ -66,7 +66,7 @@
     </section>
 
     <div class="container">
-        <form  class="contact-form" name="contact" method="POST" data-netlify="true" netlify>
+        <form  class="contact-form" name="contact" method="POST"  action="/index.html" data-netlify="true" netlify>
             <div class="form-group">
                 <label for="first-name">Nombre <span>*</span></label>
                 <input type="text" id="first-name" name="first-name" placeholder="first name" required>
