--- a/pages/cotizacion.html
+++ b/pages/cotizacion.html
@@ -62,7 +62,7 @@
     </section>
 
     <div class="container">
-        <form  class="contact-form" name="contact" method="POST"  action="/index.html" data-netlify="true" netlify>
+        <form  class="contact-form" name="contact" method="POST"  action="/pages/gracias.html" data-netlify="true" netlify>
             <div class="form-group">
                 <label for="first-name">Nombre <span>*</span></label>
                 <input type="text" id="first-name" name="first-name" placeholder="first name" required>
@@ -121,7 +121,7 @@
                     body: data
                 }).then(function(response) {
                     if (response.ok) {
-                        window.location.href = "/index";
+                        window.location.href = "/pages/gracias.html";
                     } else {
                         alert("Submission failed, please try again.");
                     }
