--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
   <script src="https://kit.fontawesome.com/ff3cb8b610.js" crossorigin="anonymous"></script>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HD00BWQM92"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HD00BWQM92');
+</script>
+
+
 <body>
 
 
