--- a/pages/cotizacion.html
+++ b/pages/cotizacion.html
@@ -19,6 +19,16 @@
     <link rel="stylesheet" href="/assets/css/cotizacon.css">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HD00BWQM92"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HD00BWQM92');
+</script>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
