--- a/pages/pago.html
+++ b/pages/pago.html
@@ -39,6 +39,16 @@
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HD00BWQM92"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HD00BWQM92');
+</script>
+
 <body>
 
     <!-- 
