Configurando modo de consentimiento agregando correo

--- a/pages/more-info-cookies.html
+++ b/pages/more-info-cookies.html
@@ -31,7 +31,7 @@
         </ul>
         
         <h2>Contacto</h2>
-        <p>Si tiene alguna pregunta sobre nuestra política de cookies, puede ponerse en contacto con nosotros a través de <a href="mailto:contacto@misitioweb.com">contacto@misitioweb.com</a>.</p>
+        <p>Si tiene alguna pregunta sobre nuestra política de cookies, puede ponerse en contacto con nosotros a través de <a href="leadsdonche@gmail.com">leadsdonche@gmail.com</a>.</p>
     </div>
 </body>
 </html>
